tests/baselines/reference/missingCloseBraceInModuleBlock.errors.txt
tests/cases/compiler/missingCloseBraceInModuleBlock.ts(4,1): error TS1005: '}' expected.


==== tests/cases/compiler/missingCloseBraceInModuleBlock.ts (1 errors) ====
    module "dummy" {
      interface Dummy {}
    
    
    
!!! error TS1005: '}' expected.
!!! related TS1007 tests/cases/compiler/missingCloseBraceInModuleBlock.ts:1:16: The parser expected to find a '}' to match the '{' token here.